1) зробив padding-left: 10px на секції Особливості 2) змінив padding  у секції Герой 3) змінив колір тексту на чорний у меню.

--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
                   <use href="./images/sprite.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="feature__subtitle">Увага до деталей</h3>
-              <p class="feature__text">
-                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-              </p>
+              <div class="feature__textbox">
+                <h3 class="feature__subtitle">Увага до деталей</h3>
+                <p class="feature__text">
+                  Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                </p>
+              </div>
             </li>
             <li class="feature__item">
               <div class="feature__icon">
@@ -97,10 +99,12 @@
                   <use href="./images/sprite.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="feature__subtitle">Пунктуальність</h3>
-              <p class="feature__text">
-                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-              </p>
+              <div class="feature__textbox">
+                <h3 class="feature__subtitle">Пунктуальність</h3>
+                <p class="feature__text">
+                  Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                </p>
+              </div>
             </li>
             <li class="feature__item">
               <div class="feature__icon">
@@ -108,10 +112,12 @@
                   <use href="./images/sprite.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="feature__subtitle">Планування</h3>
-              <p class="feature__text">
-                Так само консультація з широким активом значною мірою зумовлює.
-              </p>
+              <div class="feature__textbox">
+                <h3 class="feature__subtitle">Планування</h3>
+                <p class="feature__text">
+                  Так само консультація з широким активом значною мірою зумовлює.
+                </p>
+              </div>
             </li>
             <li class="feature__item">
               <div class="feature__icon">
@@ -119,10 +125,12 @@
                   <use href="./images/sprite.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="feature__subtitle">Сучасні технології</h3>
-              <p class="feature__text">
-                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-              </p>
+              <div class="feature__textbox">
+                <h3 class="feature__subtitle">Сучасні технології</h3>
+                <p class="feature__text">
+                  Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
